--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* <!-- 1900187 --> */
 .bookmark{
     text-align: -webkit-center;
     margin: 2%;
@@ -25,6 +26,10 @@
     text-align: left;
     padding: 0;
     cursor: pointer;
+}
+
+.bkmk{
+    text-align: center;
 }
 
 .game-redirect:hover {
@@ -74,4 +79,8 @@
     border-bottom: 1px solid black;
     width: 50%;
     padding-bottom: 1%;
+}
+
+.show-form { 
+    display: none; 
 }
